syntax = "proto3";

option csharp_namespace = "WC.Service.Employees.gRPC.Server.Services";

package positions;

service GreeterPositions {
  rpc GetOneByNamePosition(SearchPositionRequest) returns (SearchPositionResponse);
}

message Position {
  string name = 1;
}

message SearchPositionRequest {
  Position position = 1;
}

message SearchPositionResponse {
  string id = 1;
  string name = 2;
  string description = 3;
}