syntax = "proto3";

option csharp_namespace = "WC.Service.Employees.gRPC.Server.Services";

package positions;

service GreeterPositions {
  rpc GetOneByName(GetOneByNamePositionRequest) returns (GetOneByNamePositionResponse);
}

message Position {
  string name = 1;
}

message GetOneByNamePositionRequest {
  Position position = 1;
}

message GetOneByNamePositionResponse {
  string id = 1;
  string name = 2;
  string description = 3;
}
